--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,2 +1,13 @@
 <text class='title'>模板</text>
 <button size="mini">按钮</button>
+
+
+<button size="mini" bind:tap="handleShowToast">showToast</button>
+
+<button size="mini" bind:tap="handleShowModal">showModul</button>
+
+<button size="mini" bind:tap="handleShowLoading">showLoading</button>
+
+<button size="mini" bind:tap="handleShowAction">showAction</button>
+
+<button size="mini" open-type="share">分享</button>
