--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -1,2 +1,30 @@
 <text class='title'>模板</text>
 <button size="mini">按钮</button>
+
+<!-- navigator -->
+<navigator url="/pages/detail/detail">跳到详情页</navigator>
+
+<!-- navigator open-type-->
+<navigator url="/pages/detail/detail
+          open-type="redirect">
+     跳到详情页(redirect)
+</navigator>
+
+<navigator url="/pages/about/about
+          open-type="switchTab">
+     跳到关于页(switch)
+</navigator>
+
+<navigator url="/pages/detail/detail
+          open-type="reLaunch">
+     跳到详情页(reLaunch)
+</navigator>
+
+<view>----------------------</view>
+<!-- navigator 传递数据-->
+<navigator url="/pages/detail/detail?name=doeia&age=18">跳到详情页</navigator>
+<view>{{title}}</view>
+
+
+<!-- navigator 通过代码页面跳转 -->
+<button size="mini" bind:tap="handlePushDetail">跳到详情页</button>
